# TyreVisionX

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  PROGRESS_LOG.md  README.md  pyproject.toml  requirements.txt
.codex/: config.toml
.github/workflows/: ci.yml
Archive/: AGENTS.md  PROGRESS_LOG.md  README.md
Archive/configs/: aug_light.yaml  (+4 more)
configs/: aug_strong.yaml  train_resnet18.yaml  train_resnet34.yaml
data/: README.md
docs/: ARCHITECTURE.md  PROJECT_STATUS.md  progress_log.csv  progress_log.xlsx
logs/: CHANGELOG.md  DECISIONS.md  EXPERIMENT_LOG.md  TODO_NEXT.md
notebooks/: dataset_exploration.ipynb
reports/: day3_baseline_observations.md  day5_regularization_observations.md
scripts/: day5_seed_sweep.py  demo_infer.py  prepare_folds.py  prepare_manifests.py
src/: __init__.py  app_streamlit.py  cli.py  dataset.py  eval_baseline.py  evaluate.py  export.py  service_fastapi.py  train.py  train_baseline.py  transforms.py
tests/: conftest.py  test_anomaly_benchmark.py  test_anomaly_error_review_pack.py  test_anomaly_false_negative_compare.py  test_anomaly_imports.py  test_anomaly_local_features.py  test_anomaly_manifests.py  test_anomaly_patch_aware.py  test_anomaly_readiness.py  test_anomaly_robustness.py  test_anomaly_scorers.py  test_anomaly_thresholds.py  test_datasets.py  test_external_dataset_registry.py  test_false_negative_analysis.py  test_manual_google_discovery_pack.py  test_metrics.py  test_policy_docs.py  test_service.py  test_transforms.py  test_web_collection.py  test_web_confidence.py  test_web_source_acquisition.py
(+317 files in other folders)
