[project]
name = "tyrevisionx"
version = "0.1.0"
description = "TyreVisionX - tyre defect detection"
authors = [{ name = "TyreVisionX" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203", "W503"]
exclude = [".venv", "build", "dist"]

[tool.ruff.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["src"]
